# cognee-hackathon-plaid

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  Makefile  README.md  SUBMISSION.md  architecture-sequence.md  main.py  pyproject.toml  wiki.py
.claude/skills/cognee-cli/: SKILL.md
scripts/: build.sh
src/: main.py
src/cognee_cli/: cli.py  commands.py  skills.py
src/cognee_cli/skills/: REFERENCE.md
src/cognee_cli/skills/plaid/: SKILL.md
src/cognee_cli/skills/plaid/agents/: openai.yaml
src/cognee_cli/skills/plaid/data/: Assets_Report.json  Auth.json  Balance.json  Identity.json  Transactions.json  api_def.yml
src/cognee_cli/skills/plaid/references/: data-and-openapi.md
